# FlakeSearchingGUI

./: .gitignore
graphene_pipeline/: .env.example  .gitignore  README.md  config.py  pipeline.py  pyproject.toml  start-pipeline-gui.bat
graphene_pipeline/pipeline_core/: runtime.py
graphene_pipeline/pipeline_core/acquisition/: __init__.py  amscope_camera.py  chip_scanner.py  serial_stage.py
graphene_pipeline/pipeline_core/app/: __init__.py  pipeline_gui.py  pipeline_runner.py  pipeline_service.py  progress.py  stage_runner.py  test_pipeline_service.py
graphene_pipeline/pipeline_core/detection/: __init__.py  export.py  merge.py  roboflow_client.py  tiling.py  visualization.py
graphene_pipeline/pipeline_core/fiji_macros/: mist_stitch_tiles.ijm  stitch_tiles.ijm
graphene_pipeline/pipeline_core/geometry/: __init__.py  plane.py
graphene_pipeline/pipeline_core/illumination/: __init__.py  bare_chip.py  correction.py  flake_mask.py  io.py  lab_color.py  run_tile_correction.py  surface_fit.py  tile_correction.py  tile_correction_old.py  visualization.py
graphene_pipeline/pipeline_core/runtime/: __init__.py  context.py  run_config.py  sample_metadata.py  validator.py
graphene_pipeline/pipeline_core/stages/: run_full_pipeline.py  stage0_scan_chip.py  stage1_5_stitch_tiles_mist.py  stage1_correct_tiles.py  stage2_2_inspect_illumination.py  stage2_analyze_stitched.py  stage3_detect_flakes.py  stage5_generate_dzi.py  (+2 more)
graphene_pipeline/profiles/: bazinga!.json
graphene_pipeline/tests/: test_acquisition.py  test_agent_services.py  test_mist_macro.py  test_validator.py
(+58 files in other folders)
